<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/app_name">

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/pref_auto_key"
        android:title="@string/pref_auto_title"
        android:summary="@string/pref_auto_summary"/>

    <EditTextPreference
        android:key="@string/pref_broadcast_key"
        android:title="@string/pref_broadcast_title"
        android:summary="@string/pref_broadcast_summary"
        android:defaultValue="@string/pref_default_broadcast"
        android:digits="0123456789."/>

    <EditTextPreference
        android:key="@string/pref_session_gap_key"
        android:title="@string/pref_session_gap_title"
        android:summary="@string/pref_session_gap_summary"
        android:defaultValue="@string/pref_session_gap_default"
        android:inputType="number"
        android:maxLength="2"/>

</PreferenceScreen>